# kakebo

./: .gitmodules  SHADCN_SVELTE.md  components.json  package.json  svelte.config.js  vite.config.js
.agents/skills/frontend/: SKILL.md
.agents/skills/ipc/: SKILL.md
src/: App.scss  App.tsx  Theme.ts  i18n.ts
src-tauri/: .gitignore  Cargo.toml  Makefile  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ipc/: access_control.rs  greet.rs  mfa.rs  mod.rs  security.rs  session.rs
src/bindings/: AccountClass.ts  AccountDto.ts  AccountPermissionDto.ts  AccountType.ts  AmortizationType.ts  BankDto.ts  CardTransactionType.ts  CarryoverResolutionMethod.ts  CarryoverResolutionStatus.ts  ClaimStatus.ts  CompoundingFreq.ts  CreateSessionDto.ts  CurrencyDto.ts  CurrencyRateDto.ts  EnableMfaDto.ts  FriendshipDto.ts  FriendshipStatus.ts  GrantPermissionDto.ts  GroupDto.ts  GroupMemberDto.ts  InsuranceClaimDto.ts  InsurancePolicyDto.ts  ItemSplitDto.ts  JournalEntryDto.ts  KakeboCategory.ts  LocationDto.ts  MeasurementUnit.ts  MerchantDto.ts  MonthlyBudgetDto.ts  OverpaymentPref.ts  OwnershipType.ts  PermissionLevel.ts  ReceiptHeaderDto.ts  ReceiptItemDto.ts  ReceiptItemTaxDto.ts  ReceiptTaxDto.ts  RecurrenceFrequency.ts  RecurringScheduleDto.ts  RevokePermissionDto.ts  SavingsGoalDto.ts  (+8 more)
src/components/: Footer.tsx  HamburgerMenu.tsx  MonthSelector.tsx  QuickPurchaseMenu.tsx
src/components/hamburguer_menu/: HamburgerMenu.tsx
src/components/header/: ChangeLanguage.tsx  Header.tsx  UserConfigs.tsx
src/components/header/changeLanguage/: ChangeLanguage.tsx
src/components/main/: Main.tsx  main.tsx
src/components/main/items/: Items.tsx
src/dto/: Item.ts
src/lib/: index.ts  utils.ts
src/lib/components/features/auth/: AuthDashboard.svelte  SetupMasterPassword.svelte  SetupProfile.svelte  UnlockDatabase.svelte  UserSelect.svelte
src/lib/services/: security.ts  session.ts
src/routes/: +page.svelte
