[package]
name = "kakebo"
version = "0.1.0"
description = "A home administrator tool"
authors = ["Vulpuxmecatroncus", "Yasuo I. Maidana P."]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kakebo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
#serde = { version = "1.0.145", features = ["derive"] }
#serde_json = "1.0.145"
#kakebo-data-model = { git = "ssh://git@github.com/vulpuxmecatroncus/kakebo-data-model.git", features = ["to-typescript"] }
kakebo-data-model = { path = "../../kakebo-data-model", features = ["to-typescript", "sqlite"] }
#libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
#diesel = {version = "2.3.2", features = ["chrono", "sqlite"] }
#dotenvy = "0.15"
