[package]
name = "kakebo"
version = "0.1.0"
description = "A Tauri App"
authors = ["Yasuo Ignacio Maidana Perez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kakebo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kakebo-data-model = { path = "../../kakebo-data-model", features = ["sqlite", "to-typescript"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
keyring = "4.0.1"
keyring-core = "1.0.0"
ring = { version = "0.17.14", features = ["std"] }
diesel = { version = "2.3.10", features = ["r2d2"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-local-authentication = "0.3.2"
block2 = "0.6.2"

